--- a/index.css
+++ b/index.css
@@ -66,12 +66,11 @@ button {
 
 #cookie-consent p {
     font-size: 20px;
-    margin-left: 30px;
-    margin-right: 40px;
-    margin-top: 10px;
-    margin-bottom: 10px;
-
-
+    margin-left: 20px;
+    margin-right: 50px;
+    margin-top: 0px;
+    margin-bottom: 20px;
+    color: yellow;
 }
 
 .overlay {
