--- a/index.css
+++ b/index.css
@@ -36,7 +36,7 @@ input[type="password"] {
 }
 
 button {
-    background: #007BFF;
+    background: #007bff;
     color: #fff;
     border: none;
     border-radius: 5px;
